Ass-1/getting_started/test_files/syntax_errors/ExtraToken.cpm
main() : int {
  number := 10
  :=         //@error - syntax (stray assignment operator)
  print(number)
  return 0
}